feat: add kafka oauth apps and docker setup

--- a/PoC/runtimes/edc/controlplane-local/config-bob-docker.properties
+++ b/PoC/runtimes/edc/controlplane-local/config-bob-docker.properties
@@ -1,4 +1,5 @@
 #
+# Copyright (c) 2025 Contributors to the Eclipse Foundation
 # Copyright (c) 2025 Cofinity-X GmbH
 #
 # See the NOTICE file(s) distributed with this work for additional
@@ -18,8 +19,8 @@
 #
 
 edc.participant.id=bob
-edc.runtime.id=bob-control-plane
 edc.iam.issuer.id=did:web:bob
+edc.hostname=localhost
 
 # API contexts
 web.http.port=9999
@@ -32,10 +33,21 @@ web.http.control.port=9393
 web.http.control.path=/control
 
 edc.api.auth.key=password
-
+#tx.edc.dpf.consumer.proxy.auth.apikey=password
+#edc.dpf.selector.url=http://control-plane-bob:9393/v1/dataplanes
 # URLs
 edc.control.endpoint=http://control-plane-bob:9393/control
 edc.dsp.callback.address=http://control-plane-bob:9292/protocol
 
 # Vault
 edc.vault=/app/vault.properties
+
+# Dataplane config
+#web.http.public.port=9185
+#web.http.public.path=/public
+edc.transfer.proxy.token.signer.privatekey.alias=privatekeyAlias
+edc.transfer.proxy.token.verifier.publickey.alias=publickeyAlias
+#
+#tx.edc.dataplane.token.refresh.endpoint=http://control-plane-bob:9185/public/token
+#tx.edc.dataplane.token.expiry=300
+#tx.edc.dataplane.token.expiry.tolerance=10
