--- a/PoC/runtimes/edc/controlplane-local/vault.properties
+++ b/PoC/runtimes/edc/controlplane-local/vault.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2025 Cofinity-X GmbH
+# Copyright (c) 2025 Contributors to the Eclipse Foundation
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -18,4 +18,4 @@
 #
 
 # API Configuration
-secretKey=org.apache.kafka.common.security.scram.ScramLoginModule required username="admin" password="admin-secret";
+secretKey=mysecret
