--- a/PoC/runtimes/edc/controlplane-local/config-bob-docker.properties
+++ b/PoC/runtimes/edc/controlplane-local/config-bob-docker.properties
@@ -23,31 +23,27 @@ edc.iam.issuer.id=did:web:bob
 edc.hostname=localhost
 
 # API contexts
-web.http.port=9999
+web.http.port=8080
 web.http.path=/api
-web.http.management.port=9191
+web.http.management.port=8081
 web.http.management.path=/management
-web.http.protocol.port=9292
-web.http.protocol.path=/protocol
-web.http.control.port=9393
+web.http.protocol.port=8084
+web.http.protocol.path=/api/v1/dsp
+web.http.control.port=8083
 web.http.control.path=/control
 
 edc.api.auth.key=password
-#tx.edc.dpf.consumer.proxy.auth.apikey=password
-#edc.dpf.selector.url=http://control-plane-bob:9393/v1/dataplanes
+
 # URLs
-edc.control.endpoint=http://control-plane-bob:9393/control
-edc.dsp.callback.address=http://control-plane-bob:9292/protocol
+edc.control.endpoint=http://control-plane-bob:8083/control
+edc.dsp.callback.address=http://control-plane-bob:8084/api/v1/dsp
 
 # Vault
 edc.vault=/app/vault.properties
 
-# Dataplane config
-#web.http.public.port=9185
-#web.http.public.path=/public
-edc.transfer.proxy.token.signer.privatekey.alias=privatekeyAlias
-edc.transfer.proxy.token.verifier.publickey.alias=publickeyAlias
-#
-#tx.edc.dataplane.token.refresh.endpoint=http://control-plane-bob:9185/public/token
-#tx.edc.dataplane.token.expiry=300
-#tx.edc.dataplane.token.expiry.tolerance=10
+edc.oauth.provider.audience=idsc:IDS_CONNECTORS_ALL
+edc.oauth.endpoint.audience=http://control-plane-bob:8084/api/v1/dsp
+edc.catalog.cache.execution.enabled=false
+edc.policy.validation.enabled=true
+
+edc.iam.did.web.use.https=false
