--- a/PoC/runtimes/edc/dataplane-local/config-alice-docker.properties
+++ b/PoC/runtimes/edc/dataplane-local/config-alice-docker.properties
@@ -1,6 +1,5 @@
 #
 # Copyright (c) 2025 Contributors to the Eclipse Foundation
-# Copyright (c) 2025 Cofinity-X GmbH
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -25,25 +24,24 @@ edc.hostname=localhost
 # API contexts
 web.http.port=8080
 web.http.path=/api
-web.http.management.port=8081
-web.http.management.path=/management
-web.http.protocol.port=8084
-web.http.protocol.path=/api/v1/dsp
-web.http.control.port=8083
-web.http.control.path=/control
+web.http.control.port=8084
+web.http.control.path=/api/control
+web.http.public.port=8081
+web.http.public.path=/api/public
 
-edc.api.auth.key=password
+tx.edc.dpf.consumer.proxy.auth.apikey=password
 
-# URLs
-edc.control.endpoint=http://control-plane-alice:8083/control
-edc.dsp.callback.address=http://control-plane-alice:8084/api/v1/dsp
+edc.dpf.selector.url=http://control-plane-alice:8083/control/v1/dataplanes
+edc.control.endpoint=http://data-plane-alice:8084/api/control
+edc.dataplane.api.public.baseurl=http://data-plane-alice:8081/api/public
+tx.edc.dataplane.token.refresh.endpoint=http://data-plane-alice:8081/api/public/token
+tx.edc.dataplane.token.expiry=300
+tx.edc.dataplane.token.expiry.tolerance=10
+
+edc.transfer.proxy.token.signer.privatekey.alias=tokenSignerPrivateKey
+edc.transfer.proxy.token.verifier.publickey.alias=tokenSignerPublicKey
 
 # Vault
 edc.vault=/app/vault.properties
-
-edc.oauth.provider.audience=idsc:IDS_CONNECTORS_ALL
-edc.oauth.endpoint.audience=http://control-plane-alice:8084/api/v1/dsp
-edc.catalog.cache.execution.enabled=false
-edc.policy.validation.enabled=true
 
 edc.iam.did.web.use.https=false
