--- a/poc/runtimes/docker-compose.yml
+++ b/poc/runtimes/docker-compose.yml
@@ -79,8 +79,7 @@ services:
       # Mount your realm definition for import
       - ./oauth/realm.json:/opt/keycloak/data/import/realm.json:ro
     healthcheck:
-      test: [ "CMD-SHELL", "exec 3<> /dev/tcp/127.0.0.1/9000; echo -e 'GET /health/ready HTTP/1.1\\r\\nhost: http://localhost\\r\\nConnection: close\\r\\n\\r\\n' >&3; if [ $? -eq 0 ]; then echo 'Healthcheck Successful'; exit 0; else echo 'Healthcheck Failed'; exit 1; fi;" ]
-      #      test: [ "CMD", "sh", "-c", "nc -z localhost 9000" ]
+      test: [ "CMD-SHELL", "exec 3<> /dev/tcp/127.0.0.1/9000; echo -e 'GET /health/ready HTTP/1.1\\r\\nHost: localhost:9000\\r\\nConnection: close\\r\\n\\r\\n' >&3; if [ $? -eq 0 ]; then echo 'Healthcheck Successful'; exit 0; else echo 'Healthcheck Failed'; exit 1; fi;" ]
       start_period: 5s
       interval: 10s
       timeout: 10s
