--- a/poc/runtimes/edc/controlplane-local/Dockerfile
+++ b/poc/runtimes/edc/controlplane-local/Dockerfile
@@ -35,6 +35,9 @@ RUN addgroup --system "$APP_USER" && \
 
 COPY build/libs/controlplane-local.jar /app/application.jar
 
+COPY configuration.properties /app/configuration.properties
+COPY vault.properties /app/vault.properties
+
 USER "$APP_USER"
 
 ENTRYPOINT [ \
@@ -42,5 +45,4 @@ ENTRYPOINT [ \
      "-Dedc.fs.config=/app/configuration.properties", \
      "-Djava.security.egd=file:/dev/urandom", \
      "-jar", \
-     "/app/application.jar", \
-     "--log-level=DEBUG"]
+     "/app/application.jar"]
