--- a/poc/runtimes/edc/dataplane-local/configuration.properties
+++ b/poc/runtimes/edc/dataplane-local/configuration.properties
@@ -1,6 +1,5 @@
 #
 # Copyright (c) 2025 Contributors to the Eclipse Foundation
-# Copyright (c) 2025 Cofinity-X GmbH
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -18,31 +17,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-FROM eclipse-temurin:21-jre-alpine
+edc.transfer.proxy.token.signer.privatekey.alias=tokenSignerPrivateKey
+edc.transfer.proxy.token.verifier.publickey.alias=tokenSignerPublicKey
 
-ARG APP_USER=docker
-ARG APP_UID=10100
+# Vault
+edc.vault=/app/vault.properties
 
-RUN addgroup --system "$APP_USER" && \
-    adduser \
-        --shell /sbin/nologin \
-        --disabled-password \
-        --gecos "" \
-        --ingroup "$APP_USER" \
-        --no-create-home \
-        --uid "$APP_UID" \
-        "$APP_USER"
-
-COPY build/libs/controlplane-test.jar /app/application.jar
-
-COPY configuration.properties /app/configuration.properties
-COPY vault.properties /app/vault.properties
-
-USER "$APP_USER"
-
-ENTRYPOINT [ \
-     "java", \
-     "-Dedc.fs.config=/app/configuration.properties", \
-     "-Djava.security.egd=file:/dev/urandom", \
-     "-jar", \
-     "/app/application.jar"]
+edc.iam.did.web.use.https=false
