--- a/poc/gradle/libs.versions.toml
+++ b/poc/gradle/libs.versions.toml
@@ -75,6 +75,7 @@ junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", vers
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
 testcontainers = { module = "org.testcontainers:testcontainers", version.ref = "testcontainers" }
 testcontainers-junit = { module = "org.testcontainers:junit-jupiter", version.ref = "testcontainers" }
+testcontainers-kafka = { module = "org.testcontainers:kafka", version.ref = "testcontainers" }
 testcontainers-vault = { module = "org.testcontainers:vault", version.ref = "testcontainers" }
 
 # Other
