--- a/poc/gradle/libs.versions.toml
+++ b/poc/gradle/libs.versions.toml
@@ -7,11 +7,12 @@ edc = "0.10.1"
 junit = "5.11.3"
 assertj = "3.26.3"
 mockito = "5.18.0"
+awaitility = "4.2.0"
 testcontainers = "1.21.3"
 failsafe = "3.3.2"
 shadow = "8.3.5"
 kafka = "3.7.0"
-jackson = "2.15.2"
+jackson = "2.17.1"
 lombok = "1.18.38"
 slf4j = "1.7.36"
 logback = "1.5.18"
@@ -73,6 +74,8 @@ junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.re
 junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
 junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
+mockito-junit-jupiter = { module = "org.mockito:mockito-junit-jupiter", version.ref = "mockito" }
+awaitility = { module = "org.awaitility:awaitility", version.ref = "awaitility" }
 testcontainers = { module = "org.testcontainers:testcontainers", version.ref = "testcontainers" }
 testcontainers-junit = { module = "org.testcontainers:junit-jupiter", version.ref = "testcontainers" }
 testcontainers-kafka = { module = "org.testcontainers:kafka", version.ref = "testcontainers" }
@@ -82,6 +85,7 @@ testcontainers-vault = { module = "org.testcontainers:vault", version.ref = "tes
 failsafe = { module = "dev.failsafe:failsafe", version.ref = "failsafe" }
 kafka-clients = { module = "org.apache.kafka:kafka-clients", version.ref = "kafka" }
 jackson-databind = { module = "com.fasterxml.jackson.core:jackson-databind", version.ref = "jackson" }
+jackson-datatype-jsr310 = { module = "com.fasterxml.jackson.datatype:jackson-datatype-jsr310", version.ref = "jackson" }
 lombok = {module = "org.projectlombok:lombok", version.ref = "lombok"}
 slf4j-api = {module = "org.slf4j:slf4j-api", version.ref = "slf4j"}
 logback-classic = {module = "ch.qos.logback:logback-classic", version.ref = "logback"}
