feat(helm): add Helm chart for EDC Kafka demo; update docs and maintenance
Added a new Helm chart for the EDC Kafka demo, including producer/consumer apps and base configurations
Restructured demo and unified local EDC runtimes
Extended demo README with installation and verification steps; documented additional build commands for producer/consumer
Cleaned up charts (removed unused configs/comments)
Extended .gitignore (Helm dependencies *.tgz), added license headers
Dependencies: upgraded Keycloak chart to 25.2.0; allowed insecure images for Bitnami legacy repositories (for compatibility)

--- a/poc/runtimes/edc/controlplane-local/configuration.properties
+++ b/poc/runtimes/edc/controlplane-local/configuration.properties
@@ -17,32 +17,11 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 #
+# Vault
+edc.vault=/app/vault.properties
 
-FROM eclipse-temurin:21-jre-alpine
+edc.oauth.provider.audience=idsc:IDS_CONNECTORS_ALL
+edc.catalog.cache.execution.enabled=false
+edc.policy.validation.enabled=true
 
-ARG APP_USER=docker
-ARG APP_UID=10100
-
-RUN addgroup --system "$APP_USER" && \
-    adduser \
-        --shell /sbin/nologin \
-        --disabled-password \
-        --gecos "" \
-        --ingroup "$APP_USER" \
-        --no-create-home \
-        --uid "$APP_UID" \
-        "$APP_USER"
-
-COPY build/libs/controlplane-local.jar /app/application.jar
-
-COPY configuration.properties /app/configuration.properties
-COPY vault.properties /app/vault.properties
-
-USER "$APP_USER"
-
-ENTRYPOINT [ \
-     "java", \
-     "-Dedc.fs.config=/app/configuration.properties", \
-     "-Djava.security.egd=file:/dev/urandom", \
-     "-jar", \
-     "/app/application.jar"]
+edc.iam.did.web.use.https=false
