--- a/poc/gradle/libs.versions.toml
+++ b/poc/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ edc = "0.10.1"
 junit = "5.11.3"
 assertj = "3.26.3"
 mockito = "5.18.0"
-testcontainers = "1.20.3"
+testcontainers = "1.21.3"
 failsafe = "3.3.2"
 shadow = "8.3.8"
 kafka = "3.7.0"
@@ -41,6 +41,7 @@ edc-spi-validator = { module = "org.eclipse.edc:validator-spi", version.ref = "e
 edc-spi-token = { module = "org.eclipse.edc:token-spi", version.ref = "edc" }
 edc-spi-transfer = { module = "org.eclipse.edc:transfer-spi", version.ref = "edc" }
 edc-spi-dataplane = { module = "org.eclipse.edc:data-plane-spi", version.ref = "edc" }
+edc-control-plane-transfer = { module = "org.eclipse.edc:control-plane-transfer", version.ref = "edc" }
 
 # Upstream EDC - Core
 edc-core-connector = { module = "org.eclipse.edc:connector-core", version.ref = "edc" }
@@ -63,6 +64,7 @@ edc-data-plane-http-oauth2 = { module = "org.eclipse.edc:data-plane-http-oauth2"
 edc-vault-hashicorp = { module = "org.eclipse.edc:vault-hashicorp", version.ref = "edc" }
 edc-junit-base = { module = "org.eclipse.edc:junit-base", version.ref = "edc" }
 edc-transfer-data-plane-signaling = { module = "org.eclipse.edc:transfer-data-plane-signaling", version.ref = "edc" }
+edc-validator-lib = { module = "org.eclipse.edc:validator-lib", version.ref = "edc" }
 
 # Testing
 assertj = { module = "org.assertj:assertj-core", version.ref = "assertj" }
@@ -71,6 +73,7 @@ junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.re
 junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
 junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
+testcontainers = { module = "org.testcontainers:testcontainers", version.ref = "testcontainers" }
 testcontainers-junit = { module = "org.testcontainers:junit-jupiter", version.ref = "testcontainers" }
 testcontainers-vault = { module = "org.testcontainers:vault", version.ref = "testcontainers" }
 
