--- a/poc/gradle/libs.versions.toml
+++ b/poc/gradle/libs.versions.toml
@@ -19,6 +19,8 @@ logback = "1.5.18"
 java-jwt = "4.5.0"
 spring-boot = "3.2.0"
 spring-dependency-management = "1.1.4"
+opentelemetry = "2.20.0"
+docker = "9.4.0"
 
 [libraries]
 # Tractus-X EDC - Runtimes
@@ -92,6 +94,7 @@ lombok = {module = "org.projectlombok:lombok", version.ref = "lombok"}
 slf4j-api = {module = "org.slf4j:slf4j-api", version.ref = "slf4j"}
 logback-classic = {module = "ch.qos.logback:logback-classic", version.ref = "logback"}
 java-jwt = {module = "com.auth0:java-jwt", version.ref = "java-jwt"}
+opentelemetry-javaagent = { module = "io.opentelemetry.javaagent:opentelemetry-javaagent", version.ref = "opentelemetry" }
 
 # Spring Boot
 spring-boot-starter-web = {module = "org.springframework.boot:spring-boot-starter-web", version.ref = "spring-boot"}
@@ -102,3 +105,4 @@ spring-boot-starter-validation = {module = "org.springframework.boot:spring-boot
 shadow = { id = "com.gradleup.shadow", version.ref = "shadow" }
 spring-boot = { id = "org.springframework.boot", version.ref = "spring-boot" }
 spring-dependency-management = { id = "io.spring.dependency-management", version.ref = "spring-dependency-management" }
+docker = { id = "com.bmuschko.docker-remote-api", version.ref = "docker" }
