--- a/poc/runtimes/docker-compose.yml
+++ b/poc/runtimes/docker-compose.yml
@@ -20,41 +20,45 @@
 
 services:
   control-plane-alice:
+    image: edc-controlplane-kafka-local:latest
+    command: ["--log-level=DEBUG"]
     hostname: control-plane-alice
-    build: ./edc/controlplane-local
     volumes:
-      - ./edc/controlplane-local/config-alice-docker.properties:/app/configuration.properties
-      - ./edc/controlplane-local/vault.properties:/app/vault.properties
+      - ./edc/edc-controlplane-kafka-local/config-alice-docker.properties:/app/configuration.properties
+      - ./edc/edc-controlplane-kafka-local/vault.properties:/app/vault.properties
     ports:
       - "8081:8081"
       - "8083:8083"
 
   data-plane-alice:
+    image: edc-dataplane-kafka-local:latest
+    command: ["--log-level=DEBUG"]
     hostname: data-plane-alice
-    build: ./edc/dataplane-local
     ports:
       - "7080:8080"
       - "7084:8084"
       - "7081:8081"
     volumes:
-      - ./edc/dataplane-local/config-alice-docker.properties:/app/configuration.properties
-      - ./edc/dataplane-local/vault.properties:/app/vault.properties
+      - ./edc/edc-dataplane-kafka-local/config-alice-docker.properties:/app/configuration.properties
+      - ./edc/edc-dataplane-kafka-local/vault.properties:/app/vault.properties
 
   control-plane-bob:
+    image: edc-controlplane-kafka-local:latest
+    command: ["--log-level=DEBUG"]
     hostname: control-plane-bob
-    build: ./edc/controlplane-local
     volumes:
-      - ./edc/controlplane-local/config-bob-docker.properties:/app/configuration.properties
-      - ./edc/controlplane-local/vault.properties:/app/vault.properties
+      - ./edc/edc-controlplane-kafka-local/config-bob-docker.properties:/app/configuration.properties
+      - ./edc/edc-controlplane-kafka-local/vault.properties:/app/vault.properties
     ports:
       - "9081:8081"
 
   data-plane-bob:
+    image: edc-dataplane-kafka-local:latest
+    command: ["--log-level=DEBUG"]
     hostname: data-plane-bob
-    build: ./edc/dataplane-local
     volumes:
-      - ./edc/dataplane-local/config-bob-docker.properties:/app/configuration.properties
-      - ./edc/dataplane-local/vault.properties:/app/vault.properties
+      - ./edc/edc-dataplane-kafka-local/config-bob-docker.properties:/app/configuration.properties
+      - ./edc/edc-dataplane-kafka-local/vault.properties:/app/vault.properties
 
   keycloak:
     image: quay.io/keycloak/keycloak:26.2
@@ -132,7 +136,7 @@ services:
       - ./kafka/kafka-server/kafka_server_jaas.conf:/etc/kafka/secrets/kafka_server_jaas.conf:ro
 
   kafka-producer:
-    build: ./kafka/kafka-producer
+    image: kafka-producer:latest
     depends_on:
       kafka-kraft:
         condition: service_healthy
@@ -149,11 +153,13 @@ services:
       EDC_MANAGEMENT_URL:      "http://control-plane-alice:8081/management"
 
   kafka-consumer:
+    image: kafka-consumer:latest
     restart: unless-stopped
-    build: ./kafka/kafka-consumer
     depends_on:
       kafka-kraft:
         condition: service_healthy
+    ports:
+      - "8888:8080"
     environment:
       ASSET_ID:              "kafka-stream-asset"
       PROVIDER_ID:           "alice"
