--- a/poc/gradle/libs.versions.toml
+++ b/poc/gradle/libs.versions.toml
@@ -32,6 +32,7 @@ tx-edc-dataplane-hashicorp = { module = "org.eclipse.tractusx.edc:edc-dataplane-
 
 # Tractus-X EDC - Misc
 tx-edc-spi-bdrs-client = { module = "org.eclipse.tractusx.edc:bdrs-client-spi", version.ref = "tractusx" }
+tx-edc-core-utils = { module = "org.eclipse.tractusx.edc:core-utils", version.ref = "tractusx" }
 
 # Upstream EDC - SPI
 edc-spi-asset = { module = "org.eclipse.edc:asset-spi", version.ref = "edc" }
