--- a/poc/runtimes/edc/edc-controlplane-kafka-local/config-bob-docker.properties
+++ b/poc/runtimes/edc/edc-controlplane-kafka-local/config-bob-docker.properties
@@ -32,7 +32,7 @@ web.http.protocol.path=/api/v1/dsp
 web.http.control.port=8083
 web.http.control.path=/control
 
-edc.api.auth.key=password
+web.http.management.auth.key=password
 
 # URLs
 edc.control.endpoint=http://control-plane-bob:8083/control
